[package]
name = "k8s-cri"
version = "0.10.0"
license = "Apache-2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings Kubernetes CRI"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "cri"]
repository = "https://github.com/kflansburg/k8s-cri"
documentation = "https://docs.rs/crate/k8s-cri"
readme = "README.md"

[dependencies]
tonic = { version = "0"}
prost = "0"
serde = { version = "1.0", features = ["derive"] }
tonic-prost = "0"

[build-dependencies.tonic-prost-build]
version = "0"
default-features = false
features = [ "transport"]

[dev-dependencies]
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
tower = "0"
hyper-util = "0.1"
